test-suite/cases/eure-schema-to-json-schema/errors/invalid-float-nan.eure
// Test error: Float constraint with NaN value

schema = ```eure
$variant = "float"
range = "[NaN, 1.0]"
```

json_schema_errors[] = "Invalid float value: NaN"
